force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <label>תשלום</label>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>תשלומים</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>