force-app/main/default/objects/Payment__c/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <formula>NOT(ISBLANK(masof__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>חיוב</label>
    <type>Checkbox</type>
</CustomField>