force-app/main/default/objects/Payment__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <length>4</length>
    <type>Text</type>
</CustomField>