force-app/main/default/objects/Payment__c/fields/Extended_Service__c.field-meta.xml
<CustomField>
    <fullName>Extended_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>הארכת שירות</label>
    <type>Checkbox</type>
</CustomField>