force-app/main/default/objects/Payment__c/fields/index__c.field-meta.xml
<CustomField>
    <fullName>index__c</fullName>
    <label>index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>