force-app/main/default/objects/Payment__c/fields/masof__c.field-meta.xml
<CustomField>
    <fullName>masof__c</fullName>
    <label>masof</label>
    <length>255</length>
    <type>Text</type>
</CustomField>