force-app/main/default/objects/Payment__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>הערות</label>
    <type>TextArea</type>
</CustomField>