force-app/main/default/objects/Payment__c/fields/Parent_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Parent_Transaction__c</fullName>
    <label>Parent Transaction</label>
    <referenceTo>Transaction_Card__c</referenceTo>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>