force-app/main/default/objects/Payment__c/fields/Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>עסקת מע&quot;מ</label>
    <referenceTo>Payment_Transaction__c</referenceTo>
    <relationshipLabel>תשלומים</relationshipLabel>
    <relationshipName>Payment_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>