force-app/main/default/objects/Payment__c/fields/Payment_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction_ID__c</fullName>
    <inlineHelpText>מספר אישור מחברת האשראי</inlineHelpText>
    <label>Payment Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>