force-app/main/default/objects/Payment__c/fields/VAT_payment__c.field-meta.xml
<CustomField>
    <fullName>VAT_payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAT payment</label>
    <type>Checkbox</type>
</CustomField>